@@ -40,6 +40,7 @@ import com.czertainly.core.dao.repository.EntityInstanceReferenceRepository;
 import com.czertainly.core.dao.repository.LocationRepository;
 import com.czertainly.core.dao.repository.RaProfileRepository;
 import com.czertainly.core.enums.SearchFieldNameEnum;
+import com.czertainly.core.event.transaction.CertificateValidationEvent;
 import com.czertainly.core.model.auth.ResourceAction;
 import com.czertainly.core.security.authz.ExternalAuthorization;
 import com.czertainly.core.security.authz.SecuredParentUUID;
@@ -51,17 +52,21 @@ import com.czertainly.core.service.LocationService;
 import com.czertainly.core.service.PermissionEvaluator;
 import com.czertainly.core.service.v2.ClientOperationService;
 import com.czertainly.core.util.AttributeDefinitionUtils;
+import com.czertainly.core.util.FilterPredicatesBuilder;
 import com.czertainly.core.util.RequestValidatorHelper;
 import com.czertainly.core.util.SearchHelper;
 import com.czertainly.core.util.converter.Sql2PredicateConverter;
 import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.persistence.criteria.Root;
 import jakarta.transaction.Transactional;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.function.TriFunction;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
@@ -89,6 +94,7 @@ public class LocationServiceImpl implements LocationService {
     private CertificateEventHistoryService certificateEventHistoryService;
     private AttributeEngine attributeEngine;
     private PermissionEvaluator permissionEvaluator;
+    private ApplicationEventPublisher applicationEventPublisher;
 
     @Autowired
     public void setEntityInstanceReferenceRepository(EntityInstanceReferenceRepository entityInstanceReferenceRepository) {
@@ -145,6 +151,11 @@ public class LocationServiceImpl implements LocationService {
         this.permissionEvaluator = permissionEvaluator;
     }
 
+    @Autowired
+    public void setApplicationEventPublisher(ApplicationEventPublisher applicationEventPublisher) {
+        this.applicationEventPublisher = applicationEventPublisher;
+    }
+
     @Override
     //@AuditLogged(originator = ObjectType.FE, affected = ObjectType.RA_PROFILE, operation = OperationType.REQUEST)
     @ExternalAuthorization(resource = Resource.LOCATION, action = ResourceAction.LIST)
@@ -153,10 +164,7 @@ public class LocationServiceImpl implements LocationService {
         RequestValidatorHelper.revalidateSearchRequestDto(request);
         final Pageable p = PageRequest.of(request.getPageNumber() - 1, request.getItemsPerPage());
 
-        // filter locations based on attribute filters
-        final List<UUID> objectUUIDs = attributeEngine.getResourceObjectUuidsByFilters(Resource.LOCATION, filter, request.getFilters());
-
-        final BiFunction<Root<Location>, CriteriaBuilder, Predicate> additionalWhereClause = (root, cb) -> Sql2PredicateConverter.mapSearchFilter2Predicates(request.getFilters(), cb, root, objectUUIDs);
+        final TriFunction<Root<Location>, CriteriaBuilder, CriteriaQuery, Predicate> additionalWhereClause = (root, cb, cr) -> FilterPredicatesBuilder.getFiltersPredicate(cb, cr, root, request.getFilters());
         final List<LocationDto> listedKeyDTOs = locationRepository.findUsingSecurityFilter(filter, List.of("certificates", "certificates.certificate"), additionalWhereClause, p, (root, cb) -> cb.desc(root.get("created")))
                 .stream()
                 .map(Location::mapToDto).toList();
@@ -462,7 +470,7 @@ public class LocationServiceImpl implements LocationService {
         Certificate certificate = certificateService.getCertificateEntity(SecuredUUID.fromString(certificateUuid));
 
         if (certificate.getState().equals(CertificateState.REJECTED)) {
-            throw new ValidationException(ValidationError.create(String.format("Cannot push rejected certificate %s to location %s", certificate, location.getName())));
+            throw new ValidationException(ValidationError.create("Cannot push rejected certificate %s to location %s".formatted(certificate, location.getName())));
         }
 
         if (!location.isSupportMultipleEntries() && !location.getCertificates().isEmpty()) {
@@ -786,7 +794,7 @@ public class LocationServiceImpl implements LocationService {
                 logger.debug("Failed to issue Certificate for Location {}, {}. RA profile is not existing or does not have set authority", location.getName(), location.getUuid());
                 throw new LocationException("Failed to issue Certificate for Location " + location.getName() + ". RA profile is not existing or does not have set authority");
             }
-            clientCertificateDataResponseDto = clientOperationService.issueCertificate(SecuredParentUUID.fromUUID(raProfile.get().getAuthorityInstanceReferenceUuid()), raProfile.get().getSecuredUuid(), clientCertificateSignRequestDto);
+            clientCertificateDataResponseDto = clientOperationService.issueCertificate(SecuredParentUUID.fromUUID(raProfile.get().getAuthorityInstanceReferenceUuid()), raProfile.get().getSecuredUuid(), clientCertificateSignRequestDto, null);
         } catch (NotFoundException | java.security.cert.CertificateException | CertificateOperationException |
                  InvalidKeyException | IOException | NoSuchAlgorithmException | CertificateRequestException e) {
             logger.debug("Failed to issue Certificate for Location {}, {}: {}", location.getName(), location.getUuid(), e.getMessage());
@@ -904,7 +912,7 @@ public class LocationServiceImpl implements LocationService {
 
         // TODO: response with the indication if the key is available for pushed certificate
 
-        certificateLocationRepository.save(certificateLocation);
+        certificateLocation = certificateLocationRepository.save(certificateLocation);
         location.getCertificates().add(certificateLocation);
 
         locationRepository.save(location);
@@ -1032,47 +1040,48 @@ public class LocationServiceImpl implements LocationService {
                 locationDetailResponseDto.getCertificates());
     }
 
-    private void updateContent(Location entity, boolean supportMultipleEntries, boolean supportKeyManagement,
+    private void updateContent(Location location, boolean supportMultipleEntries, boolean supportKeyManagement,
                                List<MetadataAttribute> metadata, List<CertificateLocationDto> certificates) throws CertificateException, AttributeException {
-        entity.setSupportMultipleEntries(supportMultipleEntries);
-        entity.setSupportKeyManagement(supportKeyManagement);
+        location.setSupportMultipleEntries(supportMultipleEntries);
+        location.setSupportKeyManagement(supportKeyManagement);
 
-        attributeEngine.deleteObjectAttributesContent(AttributeType.META, new ObjectAttributeContentInfo(entity.getEntityInstanceReference().getConnectorUuid(), Resource.LOCATION, entity.getUuid()));
-        attributeEngine.updateMetadataAttributes(metadata, new ObjectAttributeContentInfo(entity.getEntityInstanceReference().getConnectorUuid(), Resource.LOCATION, entity.getUuid()));
-        Set<CertificateLocation> cls = new HashSet<>();
+        attributeEngine.deleteObjectAttributesContent(AttributeType.META, new ObjectAttributeContentInfo(location.getEntityInstanceReference().getConnectorUuid(), Resource.LOCATION, location.getUuid()));
+        attributeEngine.updateMetadataAttributes(metadata, new ObjectAttributeContentInfo(location.getEntityInstanceReference().getConnectorUuid(), Resource.LOCATION, location.getUuid()));
+        Map<UUID, CertificateLocation> cls = new HashMap<>();
         for (CertificateLocationDto certificateLocationDto : certificates) {
             CertificateLocation cl = new CertificateLocation();
             cl.setWithKey(certificateLocationDto.isWithKey());
             cl.setCertificate(certificateService.createCertificate(certificateLocationDto.getCertificateData(), certificateLocationDto.getCertificateType()));
-            cl.setLocation(entity);
+            cl.setLocation(location);
             cl.setPushAttributes(certificateLocationDto.getPushAttributes());
             cl.setCsrAttributes(certificateLocationDto.getCsrAttributes());
-            cls.add(cl);
+            cls.put(cl.getCertificate().getUuid(), cl);
 
-            attributeEngine.deleteObjectAttributesContent(AttributeType.META, new ObjectAttributeContentInfo(entity.getEntityInstanceReference().getConnectorUuid(), Resource.CERTIFICATE, cl.getCertificate().getUuid(), Resource.LOCATION, entity.getUuid()));
-            attributeEngine.updateMetadataAttributes(certificateLocationDto.getMetadata(), new ObjectAttributeContentInfo(entity.getEntityInstanceReference().getConnectorUuid(), Resource.CERTIFICATE, cl.getCertificate().getUuid(), Resource.LOCATION, entity.getUuid(), entity.getName()));
+            attributeEngine.deleteObjectAttributesContent(AttributeType.META, new ObjectAttributeContentInfo(location.getEntityInstanceReference().getConnectorUuid(), Resource.CERTIFICATE, cl.getCertificate().getUuid(), Resource.LOCATION, location.getUuid()));
+            attributeEngine.updateMetadataAttributes(certificateLocationDto.getMetadata(), new ObjectAttributeContentInfo(location.getEntityInstanceReference().getConnectorUuid(), Resource.CERTIFICATE, cl.getCertificate().getUuid(), Resource.LOCATION, location.getUuid(), location.getName()));
         }
 
-        Iterator<CertificateLocation> iterator = entity.getCertificates().iterator();
+        Iterator<CertificateLocation> iterator = location.getCertificates().iterator();
         while (iterator.hasNext()) {
             CertificateLocation cl = iterator.next();
 
-            if (!cls.contains(cl)) {
+            CertificateLocation lc = cls.get(cl.getId().getCertificateUuid());
+            if (lc == null) {
                 certificateLocationRepository.delete(cl);
                 iterator.remove();
             } else {
-                CertificateLocation lc = cls.stream().filter(e -> e.getCertificate().getUuid().equals(cl.getCertificate().getUuid())).findFirst().orElse(null);
-                if (lc != null) {
-                    cl.setCsrAttributes(lc.getCsrAttributes());
-                    cl.setPushAttributes(lc.getPushAttributes());
-                    cl.setWithKey(lc.isWithKey());
-                    certificateLocationRepository.save(cl);
-                }
+                cl.setCsrAttributes(lc.getCsrAttributes());
+                cl.setPushAttributes(lc.getPushAttributes());
+                cl.setWithKey(lc.isWithKey());
+                certificateLocationRepository.save(cl);
+                cls.remove(cl.getId().getCertificateUuid());
             }
         }
 
-        entity.getCertificates().addAll(cls);
-        locationRepository.save(entity);
+        location.getCertificates().addAll(cls.values());
+        locationRepository.save(location);
+
+        applicationEventPublisher.publishEvent(new CertificateValidationEvent(null, null, null, location.getUuid(), location.getName()));
     }
 
     private void authorityPreChecks(RaProfile raProfile) throws ValidationException {
@@ -1126,7 +1135,7 @@ public class LocationServiceImpl implements LocationService {
 
         List<SearchFieldDataDto> fields = List.of(
                 SearchHelper.prepareSearch(SearchFieldNameEnum.LOCATION_NAME),
-                SearchHelper.prepareSearch(SearchFieldNameEnum.LOCATION_INSTANCE_NAME, locationRepository.findDistinctEntityInstanceName()),
+                SearchHelper.prepareSearch(SearchFieldNameEnum.LOCATION_ENTITY_INSTANCE, locationRepository.findDistinctEntityInstanceName()),
                 SearchHelper.prepareSearch(SearchFieldNameEnum.LOCATION_ENABLED),
                 SearchHelper.prepareSearch(SearchFieldNameEnum.LOCATION_SUPPORT_MULTIPLE_ENTRIES),
                 SearchHelper.prepareSearch(SearchFieldNameEnum.LOCATION_SUPPORT_KEY_MANAGEMENT)
