@@ -14,12 +14,15 @@ import com.czertainly.api.model.core.cryptography.key.KeyState;
 import com.czertainly.api.model.core.cryptography.key.KeyUsage;
 import com.czertainly.core.dao.entity.Certificate;
 import com.czertainly.core.dao.entity.CryptographicKeyItem;
+import com.czertainly.core.dao.entity.DiscoveryCertificate;
 import com.czertainly.core.model.request.CertificateRequest;
 import com.czertainly.core.model.request.CrmfCertificateRequest;
 import com.czertainly.core.model.request.Pkcs10CertificateRequest;
 import jakarta.xml.bind.DatatypeConverter;
 import org.bouncycastle.asn1.DLSequence;
 import org.bouncycastle.asn1.DLTaggedObject;
+import org.bouncycastle.asn1.cmp.CMPCertificate;
+import org.bouncycastle.asn1.crmf.CertTemplate;
 import org.bouncycastle.asn1.pkcs.Attribute;
 import org.bouncycastle.asn1.pkcs.PKCSObjectIdentifiers;
 import org.bouncycastle.asn1.x500.RDN;
@@ -192,8 +195,8 @@ public class CertificateUtil {
 
         GeneralNames gns = null;
 
-        if (certificateRequest instanceof Pkcs10CertificateRequest) {
-            Attribute[] certAttributes = ((Pkcs10CertificateRequest) certificateRequest).getJcaObject().getAttributes();
+        if (certificateRequest instanceof Pkcs10CertificateRequest request) {
+            Attribute[] certAttributes = request.getJcaObject().getAttributes();
             for (Attribute attribute : certAttributes) {
                 if (attribute.getAttrType().equals(PKCSObjectIdentifiers.pkcs_9_at_extensionRequest)) {
                     Extensions extensions = Extensions.getInstance(attribute.getAttrValues().getObjectAt(0));
@@ -201,8 +204,8 @@ public class CertificateUtil {
                     break;
                 }
             }
-        } else if (certificateRequest instanceof CrmfCertificateRequest) {
-            Extensions extensions = Extensions.getInstance(((CrmfCertificateRequest) certificateRequest).getCertificateRequestMessage().getCertTemplate().getExtensions());
+        } else if (certificateRequest instanceof CrmfCertificateRequest request) {
+            Extensions extensions = Extensions.getInstance(request.getCertificateRequestMessage().getCertTemplate().getExtensions());
             gns = GeneralNames.fromExtensions(extensions, Extension.subjectAlternativeName);
         }
 
@@ -232,7 +235,7 @@ public class CertificateUtil {
             DLSequence otherNameSeq = (DLSequence) GeneralName.getInstance(value).getName();
             var oidSeq = otherNameSeq.getObjectAt(0).toString();
             var valueSeq = ((DLTaggedObject) otherNameSeq.getObjectAt(1)).getBaseObject().toString();
-            return String.format("%s=%s", oidSeq, valueSeq);
+            return "%s=%s".formatted(oidSeq, valueSeq);
         }
         if (sanType == GeneralName.ediPartyName) {
             DLSequence ediPartySeq = (DLSequence) GeneralName.getInstance(value).getName();
@@ -240,7 +243,7 @@ public class CertificateUtil {
                 return value.toString();
             }
             return ediPartySeq.size() == 1 ? "Party=" + ediPartySeq.getObjectAt(0).toString()
-                    : String.format("Assigner=%s, Party=%s", ediPartySeq.getObjectAt(0).toString(), ediPartySeq.getObjectAt(1).toString());
+                    : "Assigner=%s, Party=%s".formatted(ediPartySeq.getObjectAt(0).toString(), ediPartySeq.getObjectAt(1).toString());
         }
 
         return value.toString();
@@ -334,6 +337,30 @@ public class CertificateUtil {
                 .replace("-----END CERTIFICATE-----", "")
                 .replace("\r", "")
                 .replace("\n", "");
+    }
+
+    public static DiscoveryCertificate prepareDiscoveryCertificate(Certificate entry, X509Certificate certificate) {
+        DiscoveryCertificate discoveryCertificate = new DiscoveryCertificate();
+        if (entry != null) {
+            discoveryCertificate.setCommonName(entry.getCommonName());
+            discoveryCertificate.setSerialNumber(entry.getSerialNumber());
+            discoveryCertificate.setIssuerCommonName(entry.getIssuerCommonName());
+            discoveryCertificate.setNotAfter(entry.getNotAfter());
+            discoveryCertificate.setNotBefore(entry.getNotBefore());
+            discoveryCertificate.setCertificateContent(entry.getCertificateContent());
+        } else {
+            Certificate certificateModal = new Certificate();
+            setSubjectDNParams(certificateModal, X500Name.getInstance(CzertainlyX500NameStyle.DEFAULT, certificate.getSubjectX500Principal().getEncoded()));
+            setIssuerDNParams(certificateModal, X500Name.getInstance(CzertainlyX500NameStyle.DEFAULT, certificate.getIssuerX500Principal().getEncoded()));
+
+            discoveryCertificate.setCommonName(certificateModal.getCommonName());
+            discoveryCertificate.setIssuerCommonName(certificateModal.getIssuerCommonName());
+            discoveryCertificate.setSerialNumber(certificate.getSerialNumber().toString(16));
+            discoveryCertificate.setNotAfter(certificate.getNotAfter());
+            discoveryCertificate.setNotBefore(certificate.getNotBefore());
+        }
+
+        return discoveryCertificate;
     }
 
     public static void prepareIssuedCertificate(Certificate modal, X509Certificate certificate) {
@@ -490,6 +517,29 @@ public class CertificateUtil {
         return privateKeyAvailable;
     }
 
+    public static boolean isCertificateCmpAcceptable(Certificate certificate) {
+        if (certificate.getKey() == null ||
+                !certificate.getState().equals(CertificateState.ISSUED) ||
+                (!certificate.getValidationStatus().equals(CertificateValidationStatus.VALID)
+                        && !certificate.getValidationStatus().equals(CertificateValidationStatus.EXPIRING))
+        ) {
+            return false;
+        }
+
+        // Check if the private key has SIGN enabled
+        // Other types of keys such as split keys and secret keys are not needed to be checked since they cannot be used in certificates
+        boolean privateKeyAvailable = false;
+        for (CryptographicKeyItem item : certificate.getKey().getItems()) {
+            if (item.getType().equals(KeyType.PRIVATE_KEY)) {
+                if (item.getState() != KeyState.ACTIVE || !item.getUsage().contains(KeyUsage.SIGN)) {
+                    return false;
+                }
+                privateKeyAvailable = true;
+            }
+        }
+        return privateKeyAvailable;
+    }
+
     public static String generateRandomX509CertificateBase64(KeyPair keyPair) throws CertificateException, NoSuchAlgorithmException, SignatureException, InvalidKeyException, NoSuchProviderException, OperatorCreationException {
         return Base64.getEncoder().encodeToString(generateRandomX509Certificate(keyPair).getEncoded());
     }
@@ -550,4 +600,58 @@ public class CertificateUtil {
         return keyPair;
     }
 
+    /**
+     * Function to convert: from list of X509 certificates to list of CMPCertificates
+     *
+     * @param certs certificates to convert
+     * @return array of converted certificates
+     * @throws CertificateException if certificate could not be converted
+     */
+    public static CMPCertificate[] toCmpCertificates(List<X509Certificate> certs) throws CertificateException {
+        CMPCertificate[] cmpCertificates = new CMPCertificate[certs.size()];
+        int index = 0;
+        for (X509Certificate x509Cert : certs) {
+            cmpCertificates[index++] = toCmpCertificate(x509Cert);
+        }
+        return cmpCertificates;
+    }
+
+    /**
+     * Function to convert: from single X509 certificate to CMPCertificate
+     *
+     * @param cert certificate to convert
+     * @return converted certificate
+     * @throws CertificateException if certificate could not be converted
+     */
+    public static CMPCertificate toCmpCertificate(final java.security.cert.Certificate cert)
+            throws CertificateException {
+        return CMPCertificate.getInstance(cert.getEncoded());
+    }
+
+    /**
+     * Checks whether given X.509 certificate is intermediate certificate and not
+     * self-signed.
+     *
+     * @param cert certificate to be checked
+     * @return <code>true</code> if the certificate is intermediate and not
+     * self-signed
+     */
+    public static boolean isIntermediateCertificate(X509Certificate cert) {
+        try {
+            cert.verify(cert.getPublicKey());// true=self-signed (certificate signature with its own public key)
+            return false;
+        } catch (final SignatureException | InvalidKeyException keyEx) {
+            return true;// invalid key == it is not self-signed
+        } catch (CertificateException | NoSuchAlgorithmException | NoSuchProviderException e) {
+            return false;// could be self-signed
+        }
+    }
+
+    private static final SecureRandom SECURE_RANDOM = new SecureRandom();
+
+    public static byte[] generateRandomBytes(int length) {
+        final byte[] generated = new byte[length];
+        SECURE_RANDOM.nextBytes(generated);
+        return generated;
+    }
 }
