@@ -56,7 +56,7 @@ public class X509CertificateValidator implements ICertificateValidator {
 
     @Override
     public CertificateValidationStatus validateCertificate(Certificate certificate, boolean isCompleteChain) throws CertificateException {
-        logger.debug("Initiating the certificate validation: {}", certificate);
+        logger.debug("Initiating the certificate validation: {}", certificate.toStringShort());
 
         ArrayList<Certificate> certificateChain = new ArrayList<>();
         Certificate lastCertificate = certificate;
@@ -82,7 +82,7 @@ public class X509CertificateValidator implements ICertificateValidator {
             x509IssuerCertificate = x509Certificate;
         }
 
-        logger.debug("Certificate validation of {} finalized with result: {}", certificate, previousCertStatus);
+        logger.debug("Certificate validation of {} finalized with result: {}", certificate.toStringShort(), previousCertStatus);
         return previousCertStatus;
     }
 
@@ -148,9 +148,9 @@ public class X509CertificateValidator implements ICertificateValidator {
                 }
 
                 CertificateValidationStatus chainValidationStatus = issuerNameEqualityMessage.isEmpty() && issuerStatusMessage.isEmpty() && (trustedCaMessage.isEmpty() || Boolean.TRUE.equals(isTrustedCa)) ? CertificateValidationStatus.VALID : CertificateValidationStatus.INVALID;
-                return new CertificateValidationCheckDto(CertificateValidationCheck.CERTIFICATE_CHAIN, chainValidationStatus, String.format("Certificate chain is complete.%s%s%s", trustedCaMessage, issuerNameEqualityMessage, issuerStatusMessage));
+                return new CertificateValidationCheckDto(CertificateValidationCheck.CERTIFICATE_CHAIN, chainValidationStatus, "Certificate chain is complete.%s%s%s".formatted(trustedCaMessage, issuerNameEqualityMessage, issuerStatusMessage));
             } else {
-                return new CertificateValidationCheckDto(CertificateValidationCheck.CERTIFICATE_CHAIN, CertificateValidationStatus.INVALID, String.format("Incomplete certificate chain. Missing certificate in validation path.%s%s", issuerNameEqualityMessage, issuerStatusMessage));
+                return new CertificateValidationCheckDto(CertificateValidationCheck.CERTIFICATE_CHAIN, CertificateValidationStatus.INVALID, "Incomplete certificate chain. Missing certificate in validation path.%s%s".formatted(issuerNameEqualityMessage, issuerStatusMessage));
             }
         }
     }
@@ -387,7 +387,7 @@ public class X509CertificateValidator implements ICertificateValidator {
         final long sec = TimeUnit.MILLISECONDS.toSeconds(milliseconds)
                 - TimeUnit.MINUTES.toSeconds(TimeUnit.MILLISECONDS.toMinutes(milliseconds));
 
-        return String.format("%d days %d hours %d minutes %d seconds", dy, hr, min, sec);
+        return "%d days %d hours %d minutes %d seconds".formatted(dy, hr, min, sec);
     }
 
     private Map<CertificateValidationCheck, CertificateValidationCheckDto> initializeValidationOutput() {
